--- a/regr-mtcars.ipynb
+++ b/regr-mtcars.ipynb
@@ -1094,7 +1094,7 @@
    "source": [
     "lasso_eq = f\"ŷ = {lasso_model.intercept_:.3f}\"\n",
     "for feature, coef in zip(X_train.columns, lasso_model.coef_):\n",
-    "    if coef != 0:  # Hanya menyertakan fitur yang tidak dieliminasi oleh LASSO\n",
+    "    if coef != 0:  \n",
     "        lasso_eq += f\" + ({coef:.3f} * {feature})\"\n",
     "print(\"Persamaan LASSO:\\n\", lasso_eq)\n"
    ]
